# maestro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SETUP.md  justfile  release.toml
.cargo/: config.toml
.config/maestro/: agents.kdl
.github/workflows/: ci.yml  release.yml
docs/: 2025-12-08-assessment.md  2025-12-09-findings.md  cleanup-and-test.md  directory-browsing.md  findings.md  tab-name-override.md
docs/specs/: dev_layout.md  maestro_zellij_plugin.md  todos.md
src/: agent.rs  agents.rs  error.rs  handlers.rs  lib.rs  main.rs  model.rs  ui.rs  utils.rs
src/handlers/: forms.rs  keys.rs  mod.rs  panes.rs  session.rs
