[package]
name = "maestro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Maestro Zellij plugin (ground-up, Zellij-only)"
readme = "README.md"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kdl = "4"
uuid = { version = "1", features = ["v4"] }
zellij-tile = "0.43.1"
fuzzy-matcher = "0.3"

[profile.release]
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3"
