[package]
name = "maestro"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Maestro Zellij plugin (ground-up, Zellij-only)"
readme = "README.md"

[lib]
test = true

[[bin]]
name = "maestro"
path = "src/main.rs"
test = false

[dependencies]
serde = { version = "1", features = ["derive"] }
kdl = "4"
uuid = { version = "1", features = ["v4"] }
zellij-tile = "0.43.1"
fuzzy-matcher = "0.3"
thiserror = "1"
shell-words = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3"
